src/test/resources/stakeholders/invalid/nonuser/src/main/stakeholders/Duck.owner
package nonuser

owner Duck {
    display = "Dagobert"
}
